# Policy

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  POSTMAN_TESTING_GUIDE.md  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_RUST_ANALYSIS.md  RAILWAY_SIMPLE_CHECKLIST.md  RAILWAY_SIMPLE_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  build.sh  check_deployment_env.py  check_service_status.py  diagnose_502.py  diagnose_deployment_issues.py  docker-compose.yml  fix_syntax_errors.py  main.py  package-lock.json  postman_collection.json  quick_test.py  railway.json  render-docker.yaml  render-simple.yaml  render.yaml  requirements-railway-full.txt  requirements.txt  set_env.py  simple_analysis.py  start.py  start.sh  start_docker.py  start_ngrok.bat  start_ngrok.ps1  start_render.py  start_server_with_token.bat  test_accuracy.py  test_accuracy_analysis.py  (+22 more)
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
client/src/: App.tsx  index.css
server/: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  EMBEDDINGS_README.md  FIREBASE_SETUP.md  Procfile  README.md  build-docker.sh  build-no-rust.sh  build-render.sh  build-simple.sh  build.sh  crud.py  database.py  deployment_config.py  env.example  firebase_auth.py  main-minimal.py  main.py  models.py  pyproject.toml  requirements-conservative.txt  requirements-minimal.txt  requirements-render.txt  requirements.txt  schemas.py  setup_firebase.py  setup_openrouter.py  start.py  start.sh
server/routes/: embeddings.py
server/utils/: embeddings_utils.py
(+16 files in other folders)
