[tool.poetry]
name = "policy-analysis-api"
version = "0.1.0"
description = "FastAPI-based policy analysis API with Rust support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-dotenv = "^1.0.0"
httpx = "^0.24.0"
pydantic = {extras = ["email"], version = "^2.5.0"}
sqlalchemy = "^2.0.23"
firebase-admin = "^6.2.0"
langchain = "^0.3.27"
langchain-openai = "^0.3.28"
langchain-community = "^0.3.27"
openai = "^1.10.0"
pinecone = "^7.3.0"
PyPDF2 = "^3.0.1"
sentence-transformers = "^2.2.2"
unstructured = "^0.11.8"
transformers = "^4.41.0"
torch = "^1.11.0"
scikit-learn = "^1.2.0"
huggingface-hub = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 